feat: add trim option for CSVW